<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.signin.SignInFragment">

    <data>

        <import type="android.view.View"/>

        <variable
            name="view"
            type="br.com.felipefaustini.mesanews.presentation.signin.SignInFragment" />

        <variable
            name="viewModel"
            type="br.com.felipefaustini.mesanews.presentation.signin.SignInViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="@dimen/toolkit_dimen0"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/toolkit_stratos"
            app:title="@string/singin_email"
            app:titleTextColor="@color/toolkit_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll"
            android:layout_width="@dimen/toolkit_dimen0"
            android:layout_height="@dimen/toolkit_dimen0"
            android:fillViewport="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/toolkit_dimen16">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/mesa_news_logo_signin"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/toolkit_dimen40"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/action_email"
                    android:layout_marginTop="@dimen/toolkit_dimen60">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:imeOptions="actionNext"
                        android:text="@={viewModel.email}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/action_password"
                    android:layout_marginTop="@dimen/toolkit_dimen30"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|textPassword"
                        android:lines="1"
                        android:imeOptions="actionDone"
                        android:text="@={viewModel.password}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_sign_in"
                    style="@style/Toolkit.Button.Stratos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_signin"
                    android:layout_marginTop="@dimen/toolkit_dimen32"
                    android:onClick="@{view::onClickSignIn}"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_create_account"
                    style="@style/Toolkit.Button.Stratos.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/singin_dont_have_account"
                    android:layout_marginTop="@dimen/toolkit_dimen16"
                    android:onClick="@{view::onClickRegister}"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

        <FrameLayout
            android:id="@+id/container_loading"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolkit_dimen0"
            android:background="@color/toolkit_black_50"
            tools:visibility="gone"
            android:visibility="@{viewModel.loadingLiveData}"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="@dimen/toolkit_dimen50"
                android:layout_height="@dimen/toolkit_dimen50"
                android:layout_gravity="center"/>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>