<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="br.com.felipefaustini.mesanews.presentation.splash.SplashFragment"
        android:label="SplashFragment"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/action_splashFragment_to_onboardingFragment"
            app:destination="@id/onboardingFragment"
            app:popUpTo="@+id/app_nav_graph"
            app:popUpToInclusive="true"/>

        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@+id/app_nav_graph"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/onboardingFragment"
        android:name="br.com.felipefaustini.mesanews.presentation.onboarding.OnboardingFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_onboarding" >

        <action
            android:id="@+id/action_onboardingFragment_to_signInFragment"
            app:destination="@id/signInFragment" />

        <action
            android:id="@+id/action_onboardingFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />

    </fragment>

    <fragment
        android:id="@+id/signInFragment"
        android:name="br.com.felipefaustini.mesanews.presentation.signin.SignInFragment"
        android:label="fragment_signin"
        tools:layout="@layout/fragment_signin" >

        <action
            android:id="@+id/action_signInFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@+id/app_nav_graph"
            app:popUpToInclusive="true"/>

        <action
            android:id="@+id/action_signInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />

    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="br.com.felipefaustini.mesanews.presentation.signup.SignUpFragment"
        android:label="SignUpFragment"
        tools:layout="@layout/fragment_signup" >

        <action
            android:id="@+id/action_signUpFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@+id/app_nav_graph"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="br.com.felipefaustini.mesanews.presentation.home.HomeFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />

        <action
            android:id="@+id/action_homeFragment_to_onboardingFragment"
            app:destination="@id/onboardingFragment"
            app:popUpTo="@id/app_nav_graph"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/detailsFragment"
        android:name="br.com.felipefaustini.mesanews.presentation.details.DetailsFragment"
        android:label="fragment_details"
        tools:layout="@layout/fragment_details"/>

</navigation>